<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">    <modelVersion>4.0.0</modelVersion>    <groupId>com.hailongchen.interfacePro</groupId>    <artifactId>interfacePro</artifactId>    <packaging>war</packaging>    <version>1.0-SNAPSHOT</version>    <name>interfacePro Maven Webapp</name>    <properties>        <!-- 编码格式 -->        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>        <!-- 时间戳 -->        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>        <!-- spring版本号 -->        <spring.version>4.1.6.RELEASE</spring.version>        <!-- mybatis版本号 -->        <mybatis.version>3.3.0</mybatis.version>        <!-- jackson版本 -->        <jackson.version>2.8.1</jackson.version>        <!-- 字符串处理 -->        <commons-lang3.version>3.3.2</commons-lang3.version>    </properties>    <dependencies>        <dependency>            <groupId>junit</groupId>            <artifactId>junit</artifactId>            <version>4.12</version>            <scope>test</scope>        </dependency>        <!-- https://mvnrepository.com/artifact/jmock/jmock -->        <dependency>            <groupId>jmock</groupId>            <artifactId>jmock</artifactId>            <version>1.2.0</version>            <scope>test</scope>        </dependency>        <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->        <dependency>            <groupId>org.springframework</groupId>            <artifactId>spring-jdbc</artifactId>            <version>${spring.version}</version>        </dependency>        <dependency>            <groupId>org.springframework</groupId>            <artifactId>spring-context-support</artifactId>            <version>${spring.version}</version>        </dependency>        <dependency>            <groupId>org.springframework</groupId>            <artifactId>spring-oxm</artifactId>            <version>${spring.version}</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->        <dependency>            <groupId>org.springframework</groupId>            <artifactId>spring-context</artifactId>            <version>${spring.version}</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->        <dependency>            <groupId>org.springframework</groupId>            <artifactId>spring-core</artifactId>            <version>${spring.version}</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->        <dependency>            <groupId>org.springframework</groupId>            <artifactId>spring-beans</artifactId>            <version>${spring.version}</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->        <dependency>            <groupId>org.springframework</groupId>            <artifactId>spring-web</artifactId>            <version>${spring.version}</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->        <dependency>            <groupId>org.springframework</groupId>            <artifactId>spring-webmvc</artifactId>            <version>${spring.version}</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.springframework/spring-aop -->        <dependency>            <groupId>org.springframework</groupId>            <artifactId>spring-aop</artifactId>            <version>${spring.version}</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->        <dependency>            <groupId>org.springframework</groupId>            <artifactId>spring-tx</artifactId>            <version>${spring.version}</version>        </dependency>        <dependency>            <groupId>org.springframework</groupId>            <artifactId>spring-test</artifactId>            <version>${spring.version}</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->        <dependency>            <groupId>org.apache.httpcomponents</groupId>            <artifactId>httpclient</artifactId>            <version>4.5.1</version>        </dependency>        <!-- https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient -->        <dependency>            <groupId>commons-httpclient</groupId>            <artifactId>commons-httpclient</artifactId>            <version>3.1</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient-osgi -->        <dependency>            <groupId>org.apache.httpcomponents</groupId>            <artifactId>httpclient-osgi</artifactId>            <version>4.5.1</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime -->        <dependency>            <groupId>org.apache.httpcomponents</groupId>            <artifactId>httpmime</artifactId>            <version>4.5</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->        <dependency>            <groupId>org.projectlombok</groupId>            <artifactId>lombok</artifactId>            <version>1.16.4</version>            <scope>provided</scope>        </dependency>        <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->        <!-- 数据库连接器-->        <dependency>            <groupId>com.alibaba</groupId>            <artifactId>druid</artifactId>            <version>1.1.5</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->        <dependency>            <groupId>org.mybatis</groupId>            <artifactId>mybatis</artifactId>            <version>${mybatis.version}</version>        </dependency>        <!-- mybatis/spring包 -->        <dependency>            <groupId>org.mybatis</groupId>            <artifactId>mybatis-spring</artifactId>            <version>1.2.2</version>        </dependency>        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->        <dependency>            <groupId>javax.servlet</groupId>            <artifactId>javax.servlet-api</artifactId>            <version>3.1.0</version>            <scope>provided</scope>        </dependency>        <!-- 导入java ee jar 包 -->        <dependency>            <groupId>javax</groupId>            <artifactId>javaee-api</artifactId>            <version>7.0</version>        </dependency>        <dependency>            <groupId>javax</groupId>            <artifactId>javaee-web-api</artifactId>            <version>7.0</version>            <scope>provided</scope>        </dependency>        <dependency>            <groupId>org.aspectj</groupId>            <artifactId>aspectjweaver</artifactId>            <version>1.8.1</version>        </dependency>        <!-- 导入Mysql数据库链接jar包 -->        <dependency>            <groupId>mysql</groupId>            <artifactId>mysql-connector-java</artifactId>            <version>5.1.30</version>        </dependency>        <!-- 导入dbcp的jar包，用来在applicationContext.xml中配置数据库 -->        <dependency>            <groupId>commons-dbcp</groupId>            <artifactId>commons-dbcp</artifactId>            <version>1.2.2</version>        </dependency>        <!-- JSTL标签类 -->        <dependency>            <groupId>jstl</groupId>            <artifactId>jstl</artifactId>            <version>1.2</version>        </dependency>        <dependency>            <groupId>log4j</groupId>            <artifactId>log4j</artifactId>            <version>1.2.17</version>        </dependency>        <dependency>            <groupId>org.hibernate</groupId>            <artifactId>hibernate-validator</artifactId>            <version>5.2.4.Final</version>        </dependency>        <!-- 格式化对象，方便输出日志 -->        <dependency>            <groupId>com.alibaba</groupId>            <artifactId>fastjson</artifactId>            <version>1.1.41</version>        </dependency>        <dependency>            <groupId>org.slf4j</groupId>            <artifactId>slf4j-api</artifactId>            <version>1.7.7</version>        </dependency>        <dependency>            <groupId>org.slf4j</groupId>            <artifactId>slf4j-log4j12</artifactId>            <version>1.7.7</version>        </dependency>        <!-- 映入JSON -->        <dependency>            <groupId>org.codehaus.jackson</groupId>            <artifactId>jackson-mapper-asl</artifactId>            <version>1.9.13</version>        </dependency>        <!-- jackson json -->        <dependency>            <groupId>com.fasterxml.jackson.core</groupId>            <artifactId>jackson-core</artifactId>            <version>${jackson.version}</version>        </dependency>        <dependency>            <groupId>com.fasterxml.jackson.core</groupId>            <artifactId>jackson-databind</artifactId>            <version>${jackson.version}</version>        </dependency>        <dependency>            <groupId>com.fasterxml.jackson.core</groupId>            <artifactId>jackson-annotations</artifactId>            <version>${jackson.version}</version>        </dependency>        <dependency>            <groupId>com.fasterxml.jackson.module</groupId>            <artifactId>jackson-module-jaxb-annotations</artifactId>            <version>${jackson.version}</version>        </dependency>        <dependency>            <groupId>com.fasterxml.jackson.dataformat</groupId>            <artifactId>jackson-dataformat-xml</artifactId>            <version>${jackson.version}</version>        </dependency>        <!-- 上传组件包 -->        <dependency>            <groupId>commons-fileupload</groupId>            <artifactId>commons-fileupload</artifactId>            <version>1.3.1</version>        </dependency>        <dependency>            <groupId>commons-io</groupId>            <artifactId>commons-io</artifactId>            <version>2.4</version>        </dependency>        <dependency>            <groupId>commons-codec</groupId>            <artifactId>commons-codec</artifactId>            <version>1.9</version>        </dependency>        <dependency>            <groupId>c3p0</groupId>            <artifactId>c3p0</artifactId>            <version>0.9.1.2</version>        </dependency>        <dependency>            <groupId>org.apache.commons</groupId>            <artifactId>commons-lang3</artifactId>            <version>${commons-lang3.version}</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->        <!-- Excel(97-2003版本)解析包-->        <dependency>            <groupId>org.apache.poi</groupId>            <artifactId>poi</artifactId>            <version>3.16</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-examples -->        <dependency>            <groupId>org.apache.poi</groupId>            <artifactId>poi-examples</artifactId>            <version>3.16</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.apache.poi/ooxml-schemas -->        <dependency>            <groupId>org.apache.poi</groupId>            <artifactId>ooxml-schemas</artifactId>            <version>1.1</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->        <dependency>            <groupId>org.apache.poi</groupId>            <artifactId>poi-ooxml-schemas</artifactId>            <version>3.15</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->        <dependency>            <groupId>org.apache.poi</groupId>            <artifactId>poi-ooxml</artifactId>            <version>3.15</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad -->        <dependency>            <groupId>org.apache.poi</groupId>            <artifactId>poi-scratchpad</artifactId>            <version>3.15</version>        </dependency>        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-contrib -->        <dependency>            <groupId>org.apache.poi</groupId>            <artifactId>poi-contrib</artifactId>            <version>3.6</version>        </dependency>        <!-- https://mvnrepository.com/artifact/com.lowagie/itext -->        <!-- PDF库-->        <dependency>            <groupId>com.lowagie</groupId>            <artifactId>itext</artifactId>            <version>2.1.7</version>        </dependency>    </dependencies>    <!-- 设定主仓库，按设定顺序进行查找。 -->    <repositories>        <repository>            <id>maven-aliyun</id>            <name>Maven Aliyun</name>            <url>http://maven.aliyun.com/nexus/content/groups/public</url>        </repository>        <repository>            <id>maven-net-cn</id>            <name>Maven China Mirror</name>            <url>http://maven.net.cn/content/groups/public/</url>        </repository>    </repositories>    <!-- 设定插件仓库 -->    <pluginRepositories>        <pluginRepository>            <id>maven-aliyun</id>            <name>Maven Aliyun</name>            <url>http://maven.aliyun.com/nexus/content/groups/public</url>        </pluginRepository>        <pluginRepository>            <id>maven-net-cn</id>            <name>Maven China Mirror</name>            <url>http://maven.net.cn/content/groups/public/</url>        </pluginRepository>    </pluginRepositories>    <build>        <sourceDirectory>src/main/java</sourceDirectory>        <resources>            <resource>                <directory>src/main/java</directory>                <includes>                    <include>**/*.properties</include>                    <include>**/*.xml</include>                </includes>                <filtering>false</filtering>            </resource>            <resource>                <directory>src/main/resources</directory>            </resource>        </resources>        <testSourceDirectory>src/test/java</testSourceDirectory>        <testResources>            <testResource>                <directory>src/test/resources</directory>                <filtering>true</filtering>                <excludes>                    <exclude>**/*.java</exclude>                </excludes>            </testResource>        </testResources>        <plugins>            <plugin>                <groupId>org.apache.maven.plugins</groupId>                <artifactId>maven-compiler-plugin</artifactId>                <version>3.3</version>                <configuration>                    <source>1.8</source>                    <target>1.8</target>                    <encoding>UTF-8</encoding>                    <!-- <useIncrementalCompilation>false</useIncrementalCompilation> -->                </configuration>            </plugin>            <plugin>                <groupId>org.apache.maven.plugins</groupId>                <artifactId>maven-source-plugin</artifactId>                <version>2.4</version>                <configuration>                    <attach>true</attach>                </configuration>                <executions>                    <execution>                        <phase>compile</phase>                        <goals>                            <goal>jar</goal>                        </goals>                    </execution>                </executions>            </plugin>            <plugin>                <groupId>org.apache.maven.plugins</groupId>                <artifactId>maven-surefire-plugin</artifactId>                <version>2.3.1</version>                <configuration>                    <argLine>-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>                    <testFailureIgnore>true</testFailureIgnore>                    <includes>                        <include>**/*Test*.java</include>                    </includes>                    <excludes/>                </configuration>            </plugin>        </plugins>        <finalName>interfacePro</finalName>    </build></project>